# pubky-canva

./: .gitignore  CLAUDE.md  README.md  start.sh
.claude/: plan.md
canva-indexer/: Cargo.toml  canva.db-shm  canva.db-wal  config.toml
canva-indexer/.next/: trace  trace-build
canva-indexer/src/: api.rs  config.rs  db.rs  main.rs  pixel.rs  watcher.rs
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/components/auth/: login-dialog.tsx
frontend/components/canvas/: color-picker.tsx  pixel-canvas.tsx  pixel-info.tsx
frontend/components/layout/: header.tsx
frontend/hooks/: use-canvas-sse.ts  use-canvas.ts  use-credits.ts  use-place-pixel.ts  use-profile.ts
frontend/lib/: config.ts
frontend/lib/api/: canvas.ts  client.ts
frontend/lib/pubky/: client.ts  pixels.ts  profiles.ts
frontend/stores/: auth-store.ts
frontend/types/: auth.ts  canvas.ts
