[package]
name = "canva-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
toml = "0.8"
pubky = { git = "https://github.com/pubky/pubky-core.git", package = "pubky", rev = "c6dd23a7377d5a6ade79b5216d04ea7b85e1b612" }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
anyhow = "1"
